--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-   "name": "Nitro Sniper",
+   "name": "Nitro Sniper Enhanced",
    "description": "A nitro sniper for discord.",
-   "repository": "https://github.com/zzzmario/nitro-sniper",
+   "repository": "https://github.com/giorgiobrux/nitro-sniper-enhanced",
    "logo": "https://discord.com/assets/2c21aeda16de354ba5334551a883b481.png",
    "env": {
       "mainToken": {
@@ -9,8 +9,13 @@
          "required": true
       },
       "guildTokens": {
-         "description": "Your alt accounts tokens (Typically multiple with a lot of guilds)  (Split multiple tokens with \",\")",
-         "required": true
+         "description": "Your alt accounts tokens. Required if useMain is set to false. (Split multiple tokens with \",\")",
+         "required": false
+      },
+      "useMain": {
+         "description": "Do you want to use your main token for sniping?",
+         "required": true,
+         "value": "false"
       }
    }
 }
