--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "discord.js": "11.6.4",
     "dotenv": "^8.2.0",
     "phin": "^3.5.0",
-    "chalk": "^4.1.0"
+    "chalk": "^4.1.0",
+    "bufferutil": "^4.0.1",
+    "erlpack": "^0.1.3",
+    "utf-8-validate": "^5.0.2"
   }
 }
