--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "discord.js": "11.6.4",
+    "discord.js": "GiorgioBrux/discord.js#v11",
     "dotenv": "^8.2.0",
     "phin": "^3.5.0",
     "chalk": "^4.1.0",
