--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "chalk": "^4.1.0",
     "bufferutil": "^4.0.1",
     "erlpack": "^0.1.3",
-    "utf-8-validate": "^5.0.2"
+    "utf-8-validate": "^5.0.2",
+    "privnote": "^1.1.1"
   },
   "scripts": {
     "semantic-release": "semantic-release"
