--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "utf-8-validate": "^5.0.2",
     "privnote": "^1.1.1"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "semantic-release": "semantic-release"
   },
