--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@semantic-release/changelog": "^5.0.1"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/",
-    "pkgRoot": "build"
+    "registry": "https://npm.pkg.github.com/"
   }
 }
