--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@giorgiobrux/nitro-sniper-enhanced",
+  "name": "nitro-sniper-enhanced",
   "version": "1.1.3",
   "main": "index.js",
   "license": "GPL-3.0-or-later",
