--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nitro-sniper-enhanced",
+  "name": "@giorgiobrux/nitro-sniper-enhanced",
   "version": "1.1.5",
   "main": "index.js",
   "license": "GPL-3.0-or-later",
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/GiorgioBrux/nitro-sniper.git"
+    "url": "https://github.com/GiorgioBrux/nitro-sniper-enhanced.git"
   },
   "devDependencies": {
     "semantic-release": "^17.3.1",
@@ -29,6 +29,6 @@
     "@semantic-release/changelog": "^5.0.1"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@giorgiobrux/"
+    "registry": "https://npm.pkg.github.com"
   }
 }
