--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bufferutil": "^4.0.1",
     "erlpack": "^0.1.3",
     "utf-8-validate": "^5.0.2",
-    "privnote": "^1.1.1"
+    "crypto-js": "^4.0.0"
   },
   "engines": {
     "node": "14.x"
