refactor: rename some env variables

--- a/app.json
+++ b/app.json
@@ -21,12 +21,12 @@
          "required": true,
          "value": "false"
       },
-      "legitimacycheck": {
+      "legitimacyCheck": {
          "description": "Does some magic to check if the code could be legitimate but will slow the sniper down",
          "required": true,
          "value": "true"
       },
-      "obfuscationcheck": {
+      "obfuscationCheck": {
          "description": "Does some magic to remove obfuscation from codes but will slow the sniper down",
          "required": true,
          "value": "true"
