fix: correct wrong env variables

--- a/app.json
+++ b/app.json
@@ -31,7 +31,7 @@
          "required": true,
          "value": "true"
       },
-      "privnotecheck": {
+      "notesCheck": {
          "description": "Does some magic to check for privnotes link. Little performance impact. IMPORTANT: This will snipe all privnote links (except your own) and destroy them!",
          "required": true,
          "value": "true"
