--- a/app.json
+++ b/app.json
@@ -12,8 +12,12 @@
          "description": "Your alt accounts tokens. Required if useMain is set to false. (Split multiple tokens with \",\")",
          "required": false
       },
-      "webhookUrl": {
+      "nitro_webhookUrl": {
          "description": "Put here your webhook url if you wish to receive messages when a gift is redeemed.",
+         "required": false
+      },
+      "notes_webhookUrl": {
+         "description": "Put here your webhook url if you wish to receive messages when notes are sniped.",
          "required": false
       },
       "useMain": {
