--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bufferutil": "^4.0.1",
     "erlpack": "^0.1.3",
     "utf-8-validate": "^5.0.2",
-    "crypto-js": "^4.0.0"
+    "crypto-js": "^4.0.0",
+    "sync-request": "^6.1.0"
   },
   "engines": {
     "node": "14.x"
