fix: fix wrong PresenceStatusData in app.json

--- a/app.json
+++ b/app.json
@@ -46,7 +46,7 @@
          "value": "true"
       },
       "tokenStatus": {
-         "description": "The status of guildTokens: {online, idle, offline, dnd}",
+         "description": "The status of guildTokens: {online, idle, invisible, dnd}",
          "required": true,
          "value": "online"
       },
