--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "discord.js": "GiorgioBrux/discord.js#v11",
+    "discord.js-light": "GiorgioBrux/discord.js-light#master",
     "dotenv": "^8.2.0",
     "phin": "^3.5.0",
     "chalk": "^4.1.0",
@@ -12,7 +12,8 @@
     "erlpack": "^0.1.3",
     "utf-8-validate": "^5.0.2",
     "crypto-js": "^4.0.0",
-    "sync-request": "^6.1.0"
+    "sync-request": "^6.1.0",
+    "zlib-sync": "latest"
   },
   "engines": {
     "node": "14.x"
