--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "main": "index.js",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "discord.js-light": "GiorgioBrux/discord.js-light",
-    "dotenv": "^8.2.0",
-    "phin": "^3.5.0",
-    "chalk": "^4.1.0",
     "bufferutil": "^4.0.1",
-    "erlpack": "^0.1.3",
-    "utf-8-validate": "^5.0.2",
+    "chalk": "^4.1.0",
     "crypto-js": "^4.0.0",
+    "discord.js-light": "github:GiorgioBrux/discord.js-light",
+    "dotenv": "^8.2.0",
+    "erlpack": "^0.1.3",
+    "phin": "^3.5.0",
     "sync-request": "^6.1.0",
+    "utf-8-validate": "^5.0.2",
     "zlib-sync": "latest"
   },
   "engines": {
