--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "index.js",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "axios-rate-limit": "github:bifot/axios-rate-limit",
     "bufferutil": "^4.0.1",
     "chalk": "^4.1.0",
     "crypto-js": "^4.0.0",
     "discord.js-light": "github:GiorgioBrux/discord.js-light",
     "dotenv": "^8.2.0",
     "erlpack": "^0.1.3",
-    "phin": "^3.5.0",
+    "axios": "latest",
     "sync-request": "^6.1.0",
     "utf-8-validate": "^5.0.2",
     "zlib-sync": "latest"
