--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "axios": "^0.21.1",
     "axios-rate-limit": "github:bifot/axios-rate-limit",
     "bufferutil": "^4.0.1",
     "chalk": "^4.1.0",
@@ -11,7 +12,6 @@
     "discord.js-light": "github:GiorgioBrux/discord.js-light",
     "dotenv": "^8.2.0",
     "erlpack": "^0.1.3",
-    "axios": "latest",
     "sync-request": "^6.1.0",
     "utf-8-validate": "^5.0.2",
     "zlib-sync": "latest"
