--- a/app.json
+++ b/app.json
@@ -58,6 +58,11 @@
       "webhookping_userid": {
          "description": "If set will ping the userid in the nitro_webhook (i.e. upon successful sniping).",
          "required": false
+      },
+      "replit": {
+         "description": "Set to true only if you are running the sniper on repl.it.",
+         "required": true,
+         "value": "false"
       }
    }
 }
