--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "url": "https://github.com/GiorgioBrux/nitro-sniper-enhanced.git"
   },
   "devDependencies": {
-    "semantic-release": "^17.3.1",
+    "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
-    "@semantic-release/changelog": "^5.0.1"
+    "semantic-release": "^17.3.1"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
