--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@giorgiobrux/nitro-sniper-enhanced",
   "version": "1.9.3",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "axios": "^0.21.1",
