--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "axios": "^0.21.1",
-    "axios-rate-limit": "github:bifot/axios-rate-limit",
+    "axios-rate-limit": "^1.3.0",
     "bufferutil": "^4.0.1",
     "chalk": "^4.1.0",
     "crypto-js": "^4.0.0",
