--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bufferutil": "^4.0.1",
     "chalk": "^4.1.0",
     "crypto-js": "^4.0.0",
-    "discord.js-light": "github:GiorgioBrux/discord.js-light",
+    "discord.js-light": "git+https://github.com/GiorgioBrux/discord.js-light.git",
     "dotenv": "^8.2.0",
     "erlpack": "^0.1.3",
     "sync-request": "^6.1.0",
