--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,6 +5,9 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
+    ["@semantic-release/npm", {
+      "npmPublish": false
+    }],
     "@semantic-release/github",
     [
       "@semantic-release/changelog",
