chore: update deps

--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "dependencies": {
     "axios": "^0.21.1",
     "axios-rate-limit": "^1.3.0",
-    "bufferutil": "^4.0.1",
-    "chalk": "^4.1.0",
-    "crypto-js": "^4.0.0",
+    "bufferutil": "^4.0.3",
+    "chalk": "^4.1.2",
+    "crypto-js": "^4.1.1",
     "discord.js-light": "git+https://git@github.com/GiorgioBrux/discord.js-light.git",
-    "dotenv": "^9.0.0",
+    "dotenv": "^10.0.0",
     "erlpack": "^0.1.3",
     "sync-request": "^6.1.0",
-    "utf-8-validate": "^5.0.2",
+    "utf-8-validate": "^5.0.5",
     "zlib-sync": "latest"
   },
   "engines": {
@@ -28,26 +28,27 @@
     "url": "https://github.com/GiorgioBrux/nitro-sniper-enhanced.git"
   },
   "devDependencies": {
-    "@babel/core": "7.14.2",
-    "@babel/eslint-parser": "7.14.2",
-    "@babel/eslint-plugin": "7.13.16",
-    "@babel/preset-env": "7.14.2",
-    "@commitlint/config-conventional": "12.1.4",
+    "@babel/core": "7.15.0",
+    "@babel/eslint-parser": "7.15.0",
+    "@babel/eslint-plugin": "7.14.5",
+    "@babel/preset-env": "7.15.0",
+    "@commitlint/config-conventional": "13.1.0",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.0",
-    "commitlint": "12.1.4",
-    "eslint": "7.26.0",
+    "commitlint": "13.1.0",
+    "eslint": "7.32.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.23.2",
+    "eslint-plugin-import": "2.24.2",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.4.0",
-    "semantic-release": "17.4.3",
-    "simple-git-hooks": "2.4.1"
+    "eslint-plugin-prettier": "3.4.1",
+    "lint-staged": "^11.1.2",
+    "semantic-release": "17.4.6",
+    "simple-git-hooks": "2.6.1"
   },
   "simple-git-hooks": {
     "commit-msg": "npx --no-install commitlint --edit $1",
-    "pre-commit": "npx lint-staged"
+    "pre-commit": "npm run lint-staged"
   },
   "lint-staged": {
     "*.js": [
