ci: fix workflow

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "simple-git-hooks": {
     "commit-msg": "npx --no-install commitlint --edit $1",
-    "pre-commit": "npm run lint-staged"
+    "pre-commit": "npx lint-staged"
   },
   "lint-staged": {
     "*.js": [
